QR code scan added

--- a/app/src/main/res/layout/auto_scroll_layout.xml
+++ b/app/src/main/res/layout/auto_scroll_layout.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/store_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/grovcery_bg" />
+        android:src="@drawable/grocery_bg" />
 
 </RelativeLayout>
