QR code scan added

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -59,6 +59,7 @@
                 android:layout_marginTop="20dp"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/white" />
         </android.support.design.widget.TextInputLayout>
