--- a/app/src/main/res/layout/popular_item_layout.xml
+++ b/app/src/main/res/layout/popular_item_layout.xml
@@ -19,6 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            android:src="@drawable/deli_grocery" />
+            android:src="@drawable/deli_grocery_m" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
