--- a/app/src/main/res/layout/profile_fragment_layout.xml
+++ b/app/src/main/res/layout/profile_fragment_layout.xml
@@ -79,6 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/toolbar_background"
+                android:foreground="?selectableItemBackground"
                 android:padding="@dimen/margin_10">
 
                 <TextView
@@ -102,7 +103,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:background="?selectableItemBackground"
                     android:src="@drawable/ic_chevron_right_black_24dp" />
             </RelativeLayout>
 
@@ -111,6 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/toolbar_background"
+                android:foreground="?selectableItemBackground"
                 android:padding="@dimen/margin_10">
 
                 <TextView
@@ -134,7 +135,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:background="?selectableItemBackground"
                     android:src="@drawable/ic_chevron_right_black_24dp" />
             </RelativeLayout>
 
@@ -143,6 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/toolbar_background"
+                android:foreground="?selectableItemBackground"
                 android:padding="@dimen/margin_10">
 
                 <TextView
@@ -166,7 +167,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:background="?selectableItemBackground"
                     android:src="@drawable/ic_chevron_right_black_24dp" />
             </RelativeLayout>
 
@@ -175,6 +175,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/toolbar_background"
+                android:foreground="?selectableItemBackground"
                 android:padding="@dimen/margin_10">
 
                 <TextView
@@ -198,7 +199,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:background="?selectableItemBackground"
                     android:src="@drawable/ic_chevron_right_black_24dp" />
             </RelativeLayout>
 
@@ -207,6 +207,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/toolbar_background"
+                android:foreground="?selectableItemBackground"
                 android:padding="@dimen/margin_10">
 
                 <TextView
@@ -230,7 +231,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:background="?selectableItemBackground"
                     android:src="@drawable/ic_chevron_right_black_24dp" />
             </RelativeLayout>
         </LinearLayout>
