--- a/app/src/main/res/drawable/toolbar_background.xml
+++ b/app/src/main/res/drawable/toolbar_background.xml
@@ -15,5 +15,16 @@
             <corners android:radius="4dp" />
         </shape>
     </item>
+    <item>
+        <selector>
+            <item
+                android:drawable="@color/black_tranparent_20"
+                android:state_pressed="true" />
+            <item
+                android:drawable="@color/black_tranparent_20"
+                android:state_focused="true" />
+            <item android:drawable="@color/transparent_100" />
+        </selector>
+    </item>
 
 </layer-list>
