profile layout fixing

--- a/app/src/main/res/layout/profile_fragment_layout.xml
+++ b/app/src/main/res/layout/profile_fragment_layout.xml
@@ -57,7 +57,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="View All" />
+            android:text="View All"
+            android:textColor="#006ff1" />
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
