--- a/app/src/main/res/layout/transaction_activity_layout.xml
+++ b/app/src/main/res/layout/transaction_activity_layout.xml
@@ -16,17 +16,21 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:layout_marginTop="@dimen/margin_20"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_scrollFlags="scroll|enterAlways">
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-            <ImageView
-                android:id="@+id/back_button"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                android:layout_marginRight="@dimen/margin_20"
-                android:background="?selectableItemBackground"
-                android:src="@drawable/ic_chevron_left_black_24dp" />
+                android:layout_gravity="left|center_vertical">
+
+                <ImageView
+                    android:id="@+id/back_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?selectableItemBackground"
+                    android:padding="@dimen/margin_10"
+                    android:src="@drawable/ic_chevron_left_black_24dp" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/toolbar_title"
@@ -53,8 +57,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="@dimen/margin_5"
-            android:weightSum="2"
-            app:layout_scrollFlags="scroll|enterAlways">
+            android:weightSum="2">
 
             <TextView
                 android:id="@+id/total_popular_item"
