--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -132,7 +132,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/last_name_text"
-                    android:text="Shifu"
+                    android:text="John"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/text_size_16" />
 
